WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292642
UserMessageHandler.postMessage shouldn't do anything when called with a non-serializable parameter
https://bugs.webkit.org/show_bug.cgi?id=292642
Summary
UserMessageHandler.postMessage shouldn't do anything when called with a non-s...
Alex Christensen
Reported
2025-05-06 16:38:30 PDT
rdar://149871244
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2025-05-06 16:42:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45038
EWS
Comment 2
2025-05-06 19:49:06 PDT
Committed
294595@main
(bcb72e7dcca4): <
https://commits.webkit.org/294595@main
> Reviewed commits have been landed. Closing PR #45038 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug