UserMessageHandler.postMessage shouldn't do anything when called with a non-serializable parameter https://bugs.webkit.org/show_bug.cgi?id=292642 rdar://149871244

Reviewed by Chris Dumez.

292881@main wasn't quite right.  When the type is non-serializable we need to early return in the
web content process and not call WKScriptMessageHandler.userContentController:didReceiveScriptMessage:
in the UI process.  This was the behavior before 291444@main, but the early return was in the generated
bindings when UserMessageHandler.postMessage used to take a SerializedScriptValue parameter in
UserMessageHandler.idl.

* Source/WebKit/UIProcess/API/Cocoa/WKScriptMessage.h:
* Source/WebKit/UIProcess/API/Cocoa/WKUserContentController.mm:
* Source/WebKit/UIProcess/API/glib/WebKitUserContentManager.cpp:
* Source/WebKit/UIProcess/API/gtk/WebKitRemoteInspectorProtocolHandler.cpp:
* Source/WebKit/UIProcess/Inspector/socket/RemoteInspectorProtocolHandler.cpp:
* Source/WebKit/UIProcess/UserContent/WebScriptMessageHandler.h:
* Source/WebKit/UIProcess/UserContent/WebUserContentControllerProxy.cpp:
(WebKit::WebUserContentControllerProxy::didPostMessage):
* Source/WebKit/UIProcess/UserContent/WebUserContentControllerProxy.h:
* Source/WebKit/UIProcess/UserContent/WebUserContentControllerProxy.messages.in:
* Source/WebKit/WebProcess/UserContent/WebUserContentController.cpp:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:
(TEST(WKWebView, EvaluateJavaScriptErrorCases)):

Canonical link: https://commits.webkit.org/294595@main